--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
     <style>
-        /* Additional styles for contact page */
+        /* Styles spécifiques contact page */
         .contact {
             max-width: 700px;
             margin: 50px auto;
@@ -93,7 +93,54 @@
             transition: background 0.3s ease;
         }
 
-        form.contact-form button:hover {
+        form.contact-form button:hover:not(:disabled) {
+            background: #028a9b;
+            color: #e0f7fa;
+        }
+
+        form.contact-form button:disabled {
+            background: #555;
+            cursor: not-allowed;
+            color: #ccc;
+        }
+
+        .confirmation-message {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1.2rem;
+            color: #00e676;
+            display: none;
+        }
+
+        .error-message {
+            color: #ff5252;
+            font-size: 0.9rem;
+            margin-top: -15px;
+            margin-bottom: 10px;
+        }
+
+        .toggle-section {
+            background: #0a3a3c;
+            padding: 15px;
+            border-radius: 10px;
+            margin-top: 30px;
+            color: #b0bec5;
+        }
+
+        .toggle-button {
+            background: #00bcd4;
+            border: none;
+            color: #08292a;
+            padding: 10px 20px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-weight: 700;
+            margin: 0 auto 15px auto;
+            display: block;
+            transition: background 0.3s ease;
+        }
+
+        .toggle-button:hover {
             background: #028a9b;
             color: #e0f7fa;
         }
@@ -128,22 +175,111 @@
         <div class="contact-details">
             <div><i class="bx bx-user"></i> <strong>Name:</strong> Exauce</div>
             <div><i class="bx bx-phone"></i> <strong>Phone:</strong> +263 777 951 703</div>
-            <div><i class="bx bx-envelope"></i> <strong>Email:</strong> <a href="mailto:exauce@example.com" style="color:#00bcd4; text-decoration:none;">exauce@example.com</a></div>
+            <div><i class="bx bx-envelope"></i> <strong>Email:</strong> <a href="mailto:exaucelutumba99@gmail.com" style="color:#00bcd4; text-decoration:none;">exaucelutumba99@gmail.com</a></div>
         </div>
 
-        <form class="contact-form" action="mailto:exauce@example.com" method="post" enctype="text/plain">
+        <button class="toggle-button" id="toggleInfoBtn">Show Availability</button>
+        <div class="toggle-section" id="availabilitySection" style="display: none;">
+            <h3>Availability</h3>
+            <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
+            <p>Saturday: 10:00 AM - 2:00 PM</p>
+            <p>Sunday: Closed</p>
+        </div>
+
+        <form class="contact-form" id="contactForm" novalidate>
             <label for="name">Your Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" required />
+            <div class="error-message" id="nameError"></div>
 
             <label for="email">Your Email</label>
             <input type="email" id="email" name="email" placeholder="Enter your email" required />
+            <div class="error-message" id="emailError"></div>
 
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
+            <div class="error-message" id="messageError"></div>
 
-            <button type="submit">Send Message</button>
+            <button type="submit" id="submitBtn">Send Message</button>
         </form>
+
+        <div class="confirmation-message" id="confirmationMessage">Thank you! Your message has been sent.</div>
     </section>
+
+    <script>
+        // Toggle availability section
+        const toggleBtn = document.getElementById('toggleInfoBtn');
+        const availabilitySection = document.getElementById('availabilitySection');
+
+        toggleBtn.addEventListener('click', () => {
+            if (availabilitySection.style.display === 'none') {
+                availabilitySection.style.display = 'block';
+                toggleBtn.textContent = 'Hide Availability';
+            } else {
+                availabilitySection.style.display = 'none';
+                toggleBtn.textContent = 'Show Availability';
+            }
+        });
+
+        // Form validation and submission
+        const form = document.getElementById('contactForm');
+        const submitBtn = document.getElementById('submitBtn');
+        const confirmationMessage = document.getElementById('confirmationMessage');
+
+        const nameInput = document.getElementById('name');
+        const emailInput = document.getElementById('email');
+        const messageInput = document.getElementById('message');
+
+        const nameError = document.getElementById('nameError');
+        const emailError = document.getElementById('emailError');
+        const messageError = document.getElementById('messageError');
+
+        function validateEmail(email) {
+            const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            return re.test(email);
+        }
+
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            // Reset errors
+            nameError.textContent = '';
+            emailError.textContent = '';
+            messageError.textContent = '';
+            confirmationMessage.style.display = 'none';
+
+            let valid = true;
+
+            if (nameInput.value.trim() === '') {
+                nameError.textContent = 'Please enter your name.';
+                valid = false;
+            }
+
+            if (emailInput.value.trim() === '') {
+                emailError.textContent = 'Please enter your email.';
+                valid = false;
+            } else if (!validateEmail(emailInput.value.trim())) {
+                emailError.textContent = 'Please enter a valid email address.';
+                valid = false;
+            }
+
+            if (messageInput.value.trim() === '') {
+                messageError.textContent = 'Please enter your message.';
+                valid = false;
+            }
+
+            if (valid) {
+                submitBtn.disabled = true;
+                submitBtn.textContent = 'Sending...';
+
+                setTimeout(() => {
+                    form.reset();
+                    submitBtn.disabled = false;
+                    submitBtn.textContent = 'Send Message';
+                    confirmationMessage.style.display = 'block';
+                }, 1500);
+            }
+        });
+    </script>
 
     <script src="script.js"></script>
 </body>
